--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,9 @@ version = "0.1.0"
 authors = ["hedgar2017 <hedgar2017@gmail.com>"]
 edition = "2018"
 
-[lib]
-proc-macro = true
-
 [dependencies]
 failure = "0.1"
+proc-macro2 = "0.4"
 
 # rand = "0.4.5"
 # hex = "0.3.2"
