--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["hedgar2017 <hedgar2017@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+log = "0.4"
+env_logger = "0.6"
 failure = "0.1"
 proc-macro2 = "0.4"
 
