--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,15 @@ edition = "2018"
 log = "0.4"
 env_logger = "0.6"
 failure = "0.1"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+
 proc-macro2 = "0.4"
+
+actix-web = "1.0"
+futures = "0.1"
+bytes = "0.4"
 
 # rand = "0.4.5"
 # hex = "0.3.2"
