Add CLI to work with files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 env_logger = "0.6"
+structopt = "0.2"
 failure = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
