--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["hedgar2017 <hedgar2017@gmail.com>"]
 edition = "2018"
 
+[[bin]]
+name = "jabc"
+path = "src/main.rs"
+
 [dependencies]
 log = "0.4"
 env_logger = "0.6"
@@ -14,10 +18,6 @@ serde_derive = "1.0"
 serde_json = "1.0"
 
 proc-macro2 = "0.4"
-
-actix-web = "1.0"
-futures = "0.1"
-bytes = "0.4"
 
 # rand = "0.4.5"
 # hex = "0.3.2"
