Let and debug statements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 authors = ["hedgar2017 <hedgar2017@gmail.com>"]
 edition = "2018"
 
-[[bin]]
-name = "jabc"
-path = "src/main.rs"
+[profile.release]
+lto = true
 
 [dependencies]
 log = "0.4"
