--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,6 @@ version = "0.1.0"
 authors = ["hedgar2017 <hedgar2017@gmail.com>"]
 edition = "2018"
 
-[profile.release]
-lto = true
-
 [dependencies]
 log = "0.4"
 env_logger = "0.6"
@@ -15,6 +12,10 @@ failure = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+
+#futures = "0.1"
+#actix-web = "1.0"
+#bytes = "0.4"
 
 # rand = "0.4.5"
 # hex = "0.3.2"
