--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ failure = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+num-traits = "0.2"
+num-bigint = "0.2"
 
 #futures = "0.1"
 #actix-web = "1.0"
