--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ serde_json = "1.0"
 num-traits = "0.2"
 num-bigint = "0.2"
 
-#futures = "0.1"
-#actix-web = "1.0"
-#bytes = "0.4"
+futures = "0.1"
+actix-web = "1.0"
+bytes = "0.4"
 
 # rand = "0.4.5"
 # hex = "0.3.2"
