--- a/jab-func/Cargo.toml
+++ b/jab-func/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 bellman = { package = "bellman_ce", version = "0.3.0" }
 ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
 pairing = { package = "pairing_ce", version = "0.17.0" }
-franklin-crypto = { path = "../../franklin-crypto" }
+franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto" }
