--- a/circuit/Cargo.toml
+++ b/circuit/Cargo.toml
@@ -3,6 +3,7 @@ name = "circuit"
 version = "1.0.0"
 authors = ["hedgar2017 <hedgar2017@gmail.com>"]
 edition = "2018"
+description = "Jabberwocky generated circuit"
 
 [dependencies]
 r1cs = { path = "../r1cs" }
