Introduce the semantic crate, finish the transpiler type tracking

--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -17,8 +17,7 @@ failure = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-num-traits = "0.2"
-num-bigint = "0.2"
 
 parser = { path = "../parser" }
+semantic = { path = "../semantic" }
 r1cs = { path = "../r1cs" }
