--- a/vscode/package.json
+++ b/vscode/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "jabberwocky-syntax-highlighting",
-    "displayName": "Jabberwocky Syntax Highlighting",
-    "description": "Jabberwocky Syntax Highlighting",
+    "name": "zrust-syntax-highlighting",
+    "displayName": "ZRust Syntax Highlighting",
+    "description": "ZRust Syntax Highlighting",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.38.0"
@@ -11,15 +11,15 @@
     ],
     "contributes": {
         "languages": [{
-            "id": "jab",
-            "aliases": ["Jabberwocky", "jab"],
-            "extensions": [".jab"],
+            "id": "zrs",
+            "aliases": ["ZRust", "zrs"],
+            "extensions": [".zrs"],
             "configuration": "./language-configuration.json"
         }],
         "grammars": [{
-            "language": "jab",
-            "scopeName": "source.jabberwocky",
-            "path": "./syntaxes/jab.tmLanguage.json"
+            "language": "zrs",
+            "scopeName": "source.zrust",
+            "path": "./syntaxes/zrs.tmLanguage.json"
         }]
     }
 }
