--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "ZRust interpreter"
 
 [[bin]]
-name = "zrsi"
+name = "zrusti"
 path = "src/main.rs"
 
 [dependencies]
