--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matte
 ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
 num-bigint = "0.2.3"
 num-traits = "0.2.8"
+structopt = "0.3.3"
