--- a/zrust-vm/Cargo.toml
+++ b/zrust-vm/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 [dependencies]
 pairing = { package = "pairing_ce", version = "0.17.0" }
 bellman = { package = "bellman_ce", version = "0.3.0" }
-franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="master"}
+franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "master"}
 ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
 num-bigint = "0.2.3"
 num-traits = "0.2.8"
 structopt = "0.3.3"
+zrust-bytecode = { path = "../zrust-bytecode" }
