--- a/zrust-bytecode/Cargo.toml
+++ b/zrust-bytecode/Cargo.toml
@@ -14,3 +14,5 @@ structopt = "0.3"
 failure = "0.1"
 enum-primitive-derive = "^0.1"
 num-traits = "^0.1"
+num-bigint = "0.2.3"
+num-integer = "0.1.41"
