--- a/zrust-vm/Cargo.toml
+++ b/zrust-vm/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Alexander Movchan <am@matterlabs.dev>"]
 edition = "2018"
 
 [dependencies]
+log = "0.4"
+env_logger = "0.7"
 pairing = { package = "pairing_ce", version = "0.17.0" }
 bellman = { package = "bellman_ce", version = "0.3.0" }
 franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "master"}
