--- a/zrustm/Cargo.toml
+++ b/zrustm/Cargo.toml
@@ -1,18 +1,25 @@
 [package]
-name = "zrust-vm"
+name = "zrustm"
 version = "0.1.0"
 authors = ["Alexander Movchan <am@matterlabs.dev>"]
 edition = "2018"
+build = "build.rs"
 
 [dependencies]
 log = "0.4"
 env_logger = "0.7"
+clap = "2.33.0"
+
 pairing = { package = "pairing_ce", version = "0.17.0" }
 bellman = { package = "bellman_ce", version = "0.3.0" }
 franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "master"}
 ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
+
 num-bigint = "0.2.3"
 num-traits = "0.2.8"
 num-integer = "0.1.41"
-structopt = "0.3.3"
+
 zrust-bytecode = { path = "../zrust-bytecode" }
+
+[build-dependencies]
+clap = "2.33.0"
