--- a/zinc-vm/Cargo.toml
+++ b/zinc-vm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zinc"
+name = "zinc-vm"
 version = "0.1.0"
 authors = ["Alexander Movchan <am@matterlabs.dev>"]
 edition = "2018"
