--- a/zinc-vm/Cargo.toml
+++ b/zinc-vm/Cargo.toml
@@ -3,7 +3,6 @@ name = "zinc-vm"
 version = "0.1.0"
 authors = ["Alexander Movchan <am@matterlabs.dev>"]
 edition = "2018"
-build = "build.rs"
 
 [[bin]]
 name = "zinc"
@@ -15,6 +14,8 @@ env_logger = "0.7"
 clap = "2.33.0"
 rand = "0.4.5"
 colored = "1.9.0"
+json = "0.12.1"
+structopt = "0.3.8"
 
 pairing = { package = "pairing_ce", version = "0.17.0" }
 bellman = { package = "bellman_ce", version = "0.3.0" }
