--- a/zinc-vm/Cargo.toml
+++ b/zinc-vm/Cargo.toml
@@ -17,6 +17,7 @@ colored = "1.9.0"
 serde_json = "1.0.44"
 structopt = "0.3.8"
 lazy_static = "1.4.0"
+hex = "0.4.0"
 
 pairing = { package = "pairing_ce", version = "0.17.0" }
 bellman = { package = "bellman_ce", version = "0.3.0" }
