--- a/zinc-bytecode/Cargo.toml
+++ b/zinc-bytecode/Cargo.toml
@@ -18,4 +18,5 @@ num-integer = "0.1.41"
 enum-primitive-derive = "0.1.2"
 serde = "1.0.104"
 serde_derive = "1.0.104"
+serde_json = "1.0.46"
 bincode = "1.2.1"
