--- a/zinc-vm/Cargo.toml
+++ b/zinc-vm/Cargo.toml
@@ -18,6 +18,7 @@ serde_json = "1.0.44"
 structopt = "0.3.8"
 lazy_static = "1.4.0"
 hex = "0.4.0"
+failure = "0.1"
 
 pairing = { package = "pairing_ce", version = "0.17.0" }
 bellman = { package = "bellman_ce", version = "0.3.0" }
