--- a/zinc-tester/Cargo.toml
+++ b/zinc-tester/Cargo.toml
@@ -11,9 +11,13 @@ path = "src/main.rs"
 [dependencies]
 log = "0.4"
 env_logger = "0.7"
+structopt = "0.3"
+failure = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+
+pairing = { package = "pairing_ce", version = "0.17.0" }
 
 zinc-compiler = { path = "../zinc-compiler" }
 zinc-bytecode = { path = "../zinc-bytecode" }
