--- a/zinc-tester/Cargo.toml
+++ b/zinc-tester/Cargo.toml
@@ -9,10 +9,8 @@ name = "zinc-tester"
 path = "src/main.rs"
 
 [dependencies]
-log = "0.4"
-env_logger = "0.7"
-structopt = "0.3"
 failure = "0.1"
+colored = "1.9"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
