--- a/zinc-tester/Cargo.toml
+++ b/zinc-tester/Cargo.toml
@@ -14,6 +14,7 @@ colored = "1.9"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+rayon = "1.3"
 
 pairing = { package = "pairing_ce", version = "0.17.0" }
 
