--- a/zinc-tester/Cargo.toml
+++ b/zinc-tester/Cargo.toml
@@ -15,6 +15,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 rayon = "1.3"
+structopt = "0.3.9"
 
 pairing = { package = "pairing_ce", version = "0.17.0" }
 
