--- a/zinc-compiler/Cargo.toml
+++ b/zinc-compiler/Cargo.toml
@@ -20,5 +20,6 @@ failure = "0.1"
 num-traits = "0.2"
 num-bigint = "0.2"
 serde_json = "1.0"
+lazy_static = "1.4"
 
 zinc-bytecode = { path = "../zinc-bytecode" }
