--- a/zinc-compiler/Cargo.toml
+++ b/zinc-compiler/Cargo.toml
@@ -17,6 +17,7 @@ log = "0.4"
 env_logger = "0.7"
 structopt = "0.3"
 failure = "0.1"
+colored = "1.9"
 num-traits = "0.2"
 num-bigint = "0.2"
 serde_json = "1.0"
