Add built-in function for signature verifiaction

--- a/zinc-vm/Cargo.toml
+++ b/zinc-vm/Cargo.toml
@@ -25,7 +25,7 @@ failure = "0.1"
 
 pairing = { package = "pairing_ce", version = "0.17.0" }
 bellman = { package = "bellman_ce", version = "0.3.0" }
-franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "master"}
+franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch = "zinc"}
 ff = { package = "ff_ce", version = "0.6.0", features = ["derive"] }
 
 num-bigint = "0.2.3"
