--- a/zinc-tester/Cargo.toml
+++ b/zinc-tester/Cargo.toml
@@ -3,6 +3,7 @@ name = "zinc-tester"
 version = "0.1.4"
 authors = ["hedgar2017 <hedgar2017@gmail.com>"]
 edition = "2018"
+description = "The Zinc integration tests runner"
 
 [[bin]]
 name = "zinc-tester"
