--- a/zinc-vm/Cargo.toml
+++ b/zinc-vm/Cargo.toml
@@ -6,6 +6,7 @@ authors = [
     "hedgar2017 <hedgar2017@gmail.com>",
 ]
 edition = "2018"
+description = "The Zinc virtual machine"
 
 [[bin]]
 name = "zvm"
