--- a/zinc-book/book.toml
+++ b/zinc-book/book.toml
@@ -1,6 +1,7 @@
 [book]
-authors = ["hedgar2017"]
+title = "Zinc v0.1.4"
+authors = ["hedgar2017 <hedgar2017@gmail.com>"]
+description = "The official Zinc book"
 language = "en"
 multilingual = false
 src = "src"
-title = "Zinc"
