Interface of storage gadget module v2

--- a/zinc-vm/Cargo.toml
+++ b/zinc-vm/Cargo.toml
@@ -33,6 +33,8 @@ num-bigint = "0.2.3"
 num-traits = "0.2.8"
 num-integer = "0.1.41"
 
+primitive-types = "0.7.1"
+
 zinc-bytecode = { path = "../zinc-bytecode" }
 zinc-utils = { path = "../zinc-utils" }
 
