--- a/zargo/Cargo.toml
+++ b/zargo/Cargo.toml
@@ -13,8 +13,11 @@ path = "src/main.rs"
 log = "0.4"
 env_logger = "0.7"
 structopt = "0.3"
+
 failure = "0.1"
+colored = "1.9"
 toml = "0.5"
+
 serde = "1.0"
 serde_derive = "1.0"
 Inflector = "0.11"
