--- a/zargo/Cargo.toml
+++ b/zargo/Cargo.toml
@@ -22,4 +22,5 @@ serde = "1.0"
 serde_derive = "1.0"
 Inflector = "0.11"
 
+zinc-const = { path = "../zinc-const" }
 zinc-utils = { path = "../zinc-utils" }
