--- a/zinc-compiler/Cargo.toml
+++ b/zinc-compiler/Cargo.toml
@@ -14,10 +14,11 @@ path = "src/znc/mod.rs"
 
 [dependencies]
 log = "0.4"
-env_logger = "0.7"
 structopt = "0.3"
 colored = "1.9"
 
+serde = "1.0"
+serde_derive = "1.0"
 serde_json = "1.0"
 lazy_static = "1.4"
 petgraph = "0.5"
