--- a/zinc-server/Cargo.toml
+++ b/zinc-server/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = "1.0"
 futures = "0.3"
 actix-rt = "1.1"
 actix-web = "2.0"
+mongodb = "1.0"
 
 zinc-const = { path = "../zinc-const" }
 zinc-utils = { path = "../zinc-utils" }
