--- a/zinc-server/Cargo.toml
+++ b/zinc-server/Cargo.toml
@@ -17,12 +17,13 @@ failure = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+bson = "1.0"
 
 futures = "0.3"
 actix-rt = "1.1"
 actix-web = "2.0"
-mongodb = "1.0"
 
+zinc-mongo = { path = "../zinc-mongo" }
 zinc-const = { path = "../zinc-const" }
 zinc-utils = { path = "../zinc-utils" }
 zinc-compiler = { path = "../zinc-compiler" }
