--- a/zargo/Cargo.toml
+++ b/zargo/Cargo.toml
@@ -28,4 +28,4 @@ reqwest = "0.9.24"
 
 zinc-const = { path = "../zinc-const" }
 zinc-utils = { path = "../zinc-utils" }
-zinc-source = { path = "../zinc-source" }
+zinc-data = { path = "../zinc-data" }
