--- a/zandbox/Cargo.toml
+++ b/zandbox/Cargo.toml
@@ -21,6 +21,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 hex = "0.4"
+num_old = { package = "num", version = "0.2.1" }
 
 rayon = "1.4"
 futures = "0.3"
