Finish the zkSync transfers

--- a/zandbox/Cargo.toml
+++ b/zandbox/Cargo.toml
@@ -20,8 +20,7 @@ failure = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-hex = "0.4"
-num_old = { package = "num", version = "0.2.1" }
+rustc-hex = "2.1"
 
 rayon = "1.4"
 futures = "0.3"
@@ -29,9 +28,9 @@ async-std = "1.6"
 actix-rt = "1.1"
 actix-web = "2.0"
 sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-async-std", "macros", "postgres", "json" ] }
-wallet-gen = "0.4"
 
-zksync = { path = "../../zksync-dev/core/sdk" }
+zksync = { git = "https://github.com/matter-labs/zksync-dev", branch = "dev" }
+num_old = { package = "num", version = "0.2.1" }
 
 zinc-const = { path = "../zinc-const" }
 zinc-utils = { path = "../zinc-utils" }
