--- a/zinc-data/Cargo.toml
+++ b/zinc-data/Cargo.toml
@@ -11,5 +11,8 @@ description = "The Zinc common data structures"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+num-bigint = "0.3"
+
+zksync = { git = "https://github.com/matter-labs/zksync-dev", branch = "dev" }
 
 zinc-const = { path = "../zinc-const" }
