--- a/zargo/Cargo.toml
+++ b/zargo/Cargo.toml
@@ -21,10 +21,13 @@ colored = "2.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+num = "0.3"
 toml = "0.5"
 Inflector = "0.11"
 
 reqwest = "0.9.24"
+
+zksync = { path = "../zksync/sdk/zksync-rs" }
 
 zinc-const = { path = "../zinc-const" }
 zinc-utils = { path = "../zinc-utils" }
