--- a/zargo/Cargo.toml
+++ b/zargo/Cargo.toml
@@ -22,12 +22,15 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 num = "0.3"
+rustc-hex = "2.1"
 toml = "0.5"
 Inflector = "0.11"
 
-reqwest = "0.9.24"
+tokio = "0.2"
+reqwest = "0.9"
 
 zksync = { path = "../zksync/sdk/zksync-rs" }
+num_old = { package = "num", version = "0.2.1" }
 
 zinc-const = { path = "../zinc-const" }
 zinc-utils = { path = "../zinc-utils" }
