--- a/zinc-utils/Cargo.toml
+++ b/zinc-utils/Cargo.toml
@@ -17,5 +17,6 @@ colored = "2.0"
 num = "0.3"
 
 zksync = { path = "../zksync/sdk/zksync-rs" }
+num_old = { package = "num", version = "0.2.1" }
 
 zinc-const = { path = "../zinc-const" }
