--- a/zargo/Cargo.toml
+++ b/zargo/Cargo.toml
@@ -28,6 +28,7 @@ Inflector = "0.11"
 
 tokio = { version = "0.2", features = [ "macros" ] }
 reqwest = "0.10"
+async-recursion = "0.3"
 
 zksync = { git = "ssh://git@github.com/matter-labs/zksync-dev", branch = "dev" }
 zksync_types = { git = "ssh://git@github.com/matter-labs/zksync-dev", branch = "dev" }
