--- a/zinc-types/Cargo.toml
+++ b/zinc-types/Cargo.toml
@@ -20,9 +20,9 @@ bincode = "1.3"
 num = { version = "0.3", features = [ "serde" ] }
 semver = "0.11"
 
-zksync = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
-zksync_types = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
-zksync_eth_signer = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
+zksync = { git = "https://github.com/matter-labs/zksync", branch = "master" }
+zksync_types = { git = "https://github.com/matter-labs/zksync", branch = "master" }
+zksync_eth_signer = { git = "https://github.com/matter-labs/zksync", branch = "master" }
 num_old = { package = "num", version = "0.2.1" }
 
 zinc-project = { path = "../zinc-project" }
