--- a/zandbox/Cargo.toml
+++ b/zandbox/Cargo.toml
@@ -36,10 +36,10 @@ actix-cors = "0.5"
 actix-web = "3.3"
 sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "json" ] }
 
-zksync = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
-zksync_types = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
-zksync_utils = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
-zksync_eth_signer = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
+zksync = { git = "https://github.com/matter-labs/zksync", branch = "master" }
+zksync_types = { git = "https://github.com/matter-labs/zksync", branch = "master" }
+zksync_utils = { git = "https://github.com/matter-labs/zksync", branch = "master" }
+zksync_eth_signer = { git = "https://github.com/matter-labs/zksync", branch = "master" }
 num_old = { package = "num", version = "0.2.1" }
 
 zinc-logger = { path = "../zinc-logger" }
