--- a/zinc-tester/Cargo.toml
+++ b/zinc-tester/Cargo.toml
@@ -25,8 +25,8 @@ num = "0.3"
 tokio = "0.2"
 rayon = "1.5"
 
-zksync = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
-zksync_types = { git = "ssh://git@github.com/matter-labs/zksync", branch = "master" }
+zksync = { git = "https://github.com/matter-labs/zksync", branch = "master" }
+zksync_types = { git = "https://github.com/matter-labs/zksync", branch = "master" }
 
 zinc-const = { path = "../zinc-const" }
 zinc-project = { path = "../zinc-project" }
